--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
             </section>
 
             <!--Section: Our School-->
-            <section class="mb-5">
-                <p class=" text-center text-info text-uppercase">Our School</p>
+            <section class="mb-5 mt-5">
+                <div class=" text-center text-info text-uppercase h3">Our School</div>
                 <h1 class="mb-3 font-weight-bold text-center text-uppercase pink-text">Programs</h1>
                 <!--Grid row-->
                 <div class="row">
@@ -186,7 +186,7 @@
                     <!--Grid column-->
                     <div class="col-lg-3 col-md-3 mb-4">
                         <div class="container-fluid program-background">
-                            <h4 class="text-center white-text py-2 my-0">CRECHE</h4>
+                            <div class="text-center white-text py-2 my-0 font-weight-bold h5">CRECHE</div>
                         </div>
                         <div class="view overlay z-depth-1-half">
                             <img src="./img/De Atlas Images/4.jpg" class="img-fluid">
@@ -200,7 +200,7 @@
                     <!--Grid column-->
                     <div class="col-lg-3 col-md-3 mb-4">
                         <div class="container-fluid program-background">
-                            <h4 class="text-center white-text py-2 my-0">NURSERY</h4>
+                            <div class="text-center white-text py-2 my-0 font-weight-bold h5">NURSERY</div>
                         </div>
                         <div class="view overlay z-depth-1-half">
                             <img src="./img/De Atlas Images/3.jpg" class="img-fluid">
@@ -214,7 +214,7 @@
                     <!--Grid column-->
                     <div class="col-lg-3 col-md-3 mb-4">
                         <div class="container-fluid program-background">
-                            <h4 class="text-center white-text py-2 my-0">PRIMARY</h4>
+                            <div class="text-center white-text py-2 my-0 font-weight-bold h5">PRIMARY</div>
                         </div>
                         <div class="view overlay z-depth-1-half">
                             <img src="./img/De Atlas Images/8.jpg" class="img-fluid">
@@ -229,7 +229,7 @@
                     <!--Grid column-->
                     <div class="col-lg-3 col-md-3 mb-4">
                         <div class="container-fluid program-background">
-                            <h4 class="text-center white-text py-2 my-0">SECONDARY</h4>
+                            <div class="text-center white-text py-2 my-0 font-weight-bold h5">SECONDARY</div>
                         </div>
                         <div class="view overlay z-depth-1-half">
                             <img src="./img/De Atlas Images/7.jpg" class="img-fluid">
