--- a/index.html
+++ b/index.html
@@ -297,47 +297,47 @@
                                 <div class="carousel-inner ">
                                     <div class="item carousel-item active">
 
-                                        <p class="testimonial text-description">De Atlas Model Schools is one of the best schools that
+                                        <div class="testimonial text-description h5 pb-2">De Atlas Model Schools is one of the best schools that
                                             we parents can guarantee for any wise parent because they have qualified,
                                             diligent and dependable teachers and their students/ Pupils are very sound
                                             with a well secured and decent environment for effective learning. I have
-                                            been enjoying the school.</p>
+                                            been enjoying the school.</div>
                                         <p class="overview h4 text-info pb-2">Mrs Kareem (Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
 
-                                        <p class="testimonial text-description">De-atlas Model school has been a school that has touched
+                                        <div class="testimonial text-description h5 pb-2">De-atlas Model school has been a school that has touched
                                             so many lives and changed many pupils for a better future, academically,
                                             morally and spiritually. My kids are also living testimony that they are
-                                            independent and are now stable academically.</p>
+                                            independent and are now stable academically.</div>
                                         <p class="overview h4 text-info pb-2">Mr Oduguwa T.V (Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
-                                        <p class="testimonial text-description">Atlas School is a lovely school. i was impressed on my
+                                        <p class="testimonial text-description h5 pb-2">Atlas School is a lovely school. i was impressed on my
                                             first visit to the school to learn about their ciriculum and offerings.</p>
                                         <p class="overview h4 text-info pb-2">Mr Opeyemi Emmanuel (Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
 
-                                        <p class="testimonial text-description">They've got a lovely enviroment and facilities.</p>
+                                        <p class="testimonial text-description h5 pb-2">They've got a lovely enviroment and facilities.</p>
                                         <p class="overview h4 text-info pb-2">Mrs. Temitope Esther (Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
 
-                                        <p class="testimonial text-description">Atlas schools truely stands out amongs the other schools
+                                        <p class="testimonial text-description h5 pb-2">Atlas schools truely stands out amongs the other schools
                                             in the neighbourhood. One thing i love about them is the way the students
                                             are adressed and taught.</p>
                                         <p class="overview h4 text-info pb-2">Mr Chinedu Nnamdi (Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
 
-                                        <p class="testimonial text-description">The teachers and admin instilled core values of
+                                        <p class="testimonial text-description h5 pb-2">The teachers and admin instilled core values of
                                             discipline, hard work and honesty into the children.</p>
                                         <p class="overview h4 text-info pb-2">Mrs. Blessing Fadola (Parent)</p>
                                     </div>
                                     <div class="item carousel-item">
 
-                                        <p class="testimonial text-description">When I was deciding which school to choose for my
+                                        <p class="testimonial text-description h5 pb-2">When I was deciding which school to choose for my
                                             hyperactive twins, initially I settled for another option. But as soon as
                                             I’ve heard my friend telling me about how great her experience was with
                                             Atlas schools, I was swayed and decided it had to be atlas school for my
