--- a/index.html
+++ b/index.html
@@ -377,14 +377,12 @@
                 <!--First column-->
                 <div class="col-md-6 col-lg-4 col-xl-4 mb-4">
                     <div class="row">
-                        <div class="col-6"><img src="./img/De Atlas Images/DE ATLAS WEBSITE LOGO.png" alt=""
+                        <div class=""><img src="./img/De Atlas Images/DE ATLAS WEBSITE LOGO.png" alt=""
                                 class="img-fluid"></div>
-                        <div class="col-6 pt-5">
-
-                        </div>
+                        
                     </div>
 
-                    <p class="text-justify">De Atlas Model School offers
+                    <p class="text-justify font">De Atlas Model School offers
                         first-class education from the
                         foundation stage to
                         secondary levels. </p>
@@ -394,7 +392,7 @@
                 <!--Second column-->
                 <div class="col-md-3 col-lg-4 col-xl-4">
                     <h6 class="text-uppercase font-weight-bold">
-                        <strong>Contact us</strong>
+                        <div class="h4 font-weight-bold">Contact us</div>
                     </h6>
                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p>
@@ -413,7 +411,7 @@
                 <!--Third column-->
                 <div class="col-md-3 col-lg-4 col-xl-4 mx-auto mb-4">
                     <h6 class="text-uppercase font-weight-bold">
-                        <strong>Useful links</strong>
+                        <div class="h4 font-weight-bold">Useful links</div>
                     </h6>
                     <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                     <p>
