--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                         
                     </div>
 
-                    <p class="text-justify font">De Atlas Model School offers
+                    <p>De Atlas Model School offers
                         first-class education from the
                         foundation stage to
                         secondary levels. </p>
