--- a/gallery.html
+++ b/gallery.html
@@ -281,7 +281,7 @@
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2020 Copyright:
-            <a href="https://balogunridwan.com"> De Atlas Model School</a>
+            <a href="#"> De Atlas Model School</a>
         </div>
         <div class="footer-copyright text-center py-3">All rights reserved
         </div>
