--- a/about.html
+++ b/about.html
@@ -278,6 +278,9 @@
                     <p>
                         <a href="gallery.html">GALLERY</a>
                     </p>
+                    <p>
+                        <a href="contact.html">CONTACT</a>
+                    </p>
                 </div>
                 <!--/.Third column-->
             </div>
