--- a/contact.html
+++ b/contact.html
@@ -239,6 +239,9 @@
                     <p>
                         <a href="gallery.html">GALLERY</a>
                     </p>
+                    <p>
+                        <a href="#">CONTACT</a>
+                    </p>
                 </div>
                 <!--/.Third column-->
 
