--- a/gallery.html
+++ b/gallery.html
@@ -271,6 +271,9 @@
                     <p>
                         <a href="gallery.html">GALLERY</a>
                     </p>
+                    <p>
+                        <a href="contact.html">CONTACT</a>
+                    </p>
                 </div>
                 <!--/.Third column-->
 
