--- a/index.html
+++ b/index.html
@@ -426,6 +426,9 @@
                     <p>
                         <a href="gallery.html">GALLERY</a>
                     </p>
+                    <p>
+                        <a href="contact.html">CONTACT</a>
+                    </p>
                 </div>
             </div>
         </div>
