--- a/admissions.html
+++ b/admissions.html
@@ -206,6 +206,9 @@
                     <p>
                         <a href="gallery.html">GALLERY</a>
                     </p>
+                    <p>
+                        <a href="contact.html">CONTACT</a>
+                    </p>
                 </div>
                 <!--/.Third column-->
 
