--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
                     <div class="col-md-8 mb-4">
                         <h3 class="mb-5 font-weight-bold text-uppercase pink-text">write us</h3>
                         <!-- Form contact -->
-                        <form>
+                        <form action="/" method="get">
                             <div class="form-group">
 
                                 <input type="text" class="form-control" id="exampleFormControlInput1"
